# flask-simple-mailer

./: Dockerfile  app.py  pyproject.toml
.github/workflows/: main.yml
mail/: sender.py
